Overflow of buttons fixed

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ body {
 }
 
 button {
-  z-index: 3;
+  z-index: 2;
 }
 
 .button-large {
